objects/LMS_PartsExclusions__mdt.object
<CustomObject>
    <fields>
        <fullName>FieldtoQuery__c</fullName>
        <label>FieldtoQuery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_File_Type__c</fullName>
        <label>License File Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Hybrid</fullName>
                    <default>true</default>
                    <label>Hybrid</label>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product2</fullName>
                    <default>true</default>
                    <label>Product2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LMS Parts Exclusion</label>
    <pluralLabel>LMS Parts Exclusions</pluralLabel>
</CustomObject>